--- a/src/styles/css/header.css
+++ b/src/styles/css/header.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$header-color".
-        on line 21 of src/styles/scss/Header.scss
+        on line 18 of src/styles/scss/Header.scss
 
-16:   flex-direction: row;
-17:   align-items: center;
-18:   width: 100%;
-19:   height: 10vh;
-20:   font-size: 1.2em;
-21:   background-color: $header-color;
-22:   font-family: Helvetica;
-23:   font-weight: 100;
-24:   li {
-25:     margin: 10px;
-26:   }
+13: 
+14: #header-nav {
+15:   display          : flex;
+16:   width            : 100%;
+17:   height           : 10vh;
+18:   background-color : $header-color;
+19:   align-items      : center;
+20:   font-family      : Helvetica;
+21:   font-size        : 1.2em;
+22:   font-weight      : 100;
+23:   flex-direction   : row;
 
 Backtrace:
-src/styles/scss/Header.scss:21
+src/styles/scss/Header.scss:18
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
@@ -68,4 +68,4 @@ src/styles/scss/Header.scss:21
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$header-color\".\A         on line 21 of src/styles/scss/Header.scss\A \A 16:   flex-direction: row;\A 17:   align-items: center;\A 18:   width: 100%;\A 19:   height: 10vh;\A 20:   font-size: 1.2em;\A 21:   background-color: $header-color;\A 22:   font-family: Helvetica;\A 23:   font-weight: 100;\A 24:   li {\A 25:     margin: 10px;\A 26:   }"; }
+  content: "Error: Undefined variable: \"$header-color\".\A         on line 18 of src/styles/scss/Header.scss\A \A 13: \A 14: #header-nav {\A 15:   display          : flex;\A 16:   width            : 100%;\A 17:   height           : 10vh;\A 18:   background-color : $header-color;\A 19:   align-items      : center;\A 20:   font-family      : Helvetica;\A 21:   font-size        : 1.2em;\A 22:   font-weight      : 100;\A 23:   flex-direction   : row;"; }
